--- a/index.html
+++ b/index.html
@@ -11,7 +11,7 @@
 
 
 
-<title>typos</title>
+<title>README.utf8</title>
 
 <script>// Pandoc 2.9 adds attributes on both header and div. We remove the former (to
 // be compatible with the behavior of Pandoc < 2.8).
@@ -374,7 +374,6 @@ summary {
 
 
 
-<h1 class="title toc-ignore">typos</h1>
 
 </div>
 
@@ -422,7 +421,7 @@ nameS(iris)
 #&gt;  .typo_alert(&quot;names&quot;,.call)
 #&gt;  base::names(...)
 #&gt; }
-#&gt; &lt;environment: 0x0000020f5093d168&gt;</code></pre>
+#&gt; &lt;environment: 0x0000020f51ad9ec8&gt;</code></pre>
 <p>Notice that all the arguments passed to <code>nameS(...)</code> are forwarded on to <code>names(...)</code></p>
 </div>
 <div id="other-packages" class="section level2">
@@ -438,7 +437,7 @@ nameS(iris)
 #&gt;  .typo_alert(&quot;rnorm&quot;,.call)
 #&gt;  stats::rnorm(...)
 #&gt; }
-#&gt; &lt;environment: 0x0000020f553e5208&gt;</code></pre>
+#&gt; &lt;environment: 0x0000020f55e527e0&gt;</code></pre>
 </div>
 <div id="warning" class="section level2">
 <h2>Warning</h2>
