--- a/index.html
+++ b/index.html
@@ -392,13 +392,8 @@ devtools::install_github(&quot;MyKo101/typos&quot;)</code></pre>
 </div>
 <div id="example" class="section level2">
 <h2>Example</h2>
-<p>For example, without <code>typos</code> installed, the following will throw an error due to the misspelling of <code>names</code> as <code>nams</code>.</p>
+<p>For example, without <code>typos</code> installed, mistyping the functions <code>names()</code> as <code>nameS()</code> will throw an error. But, with <code>typos</code>, the function is still evaluated, and rather than an Error, a Warning is produced.</p>
 <pre class="r"><code>nameS(iris)
-#&gt; Warning: Typo of &quot;names()&quot; detected in &quot;nameS(iris)&quot;
-#&gt; [1] &quot;Sepal.Length&quot; &quot;Sepal.Width&quot;  &quot;Petal.Length&quot; &quot;Petal.Width&quot;  &quot;Species&quot;</code></pre>
-<p>But, with <code>typos</code>, the function is still evaluated, and rather than an Error, a Warning is produced.</p>
-<pre class="r"><code>library(typos)
-nameS(iris)
 #&gt; Warning: Typo of &quot;names()&quot; detected in &quot;nameS(iris)&quot;
 #&gt; [1] &quot;Sepal.Length&quot; &quot;Sepal.Width&quot;  &quot;Petal.Length&quot; &quot;Petal.Width&quot;  &quot;Species&quot;</code></pre>
 </div>
@@ -421,23 +416,15 @@ nameS(iris)
 #&gt;  .typo_alert(&quot;names&quot;,.call)
 #&gt;  base::names(...)
 #&gt; }
-#&gt; &lt;environment: 0x0000020f51ad9ec8&gt;</code></pre>
+#&gt; &lt;environment: 0x0000020f52283388&gt;</code></pre>
 <p>Notice that all the arguments passed to <code>nameS(...)</code> are forwarded on to <code>names(...)</code></p>
 </div>
 <div id="other-packages" class="section level2">
 <h2>Other packages</h2>
 <p>As well as the correctly spelled function, the <code>.typo()</code> function can take a <code>.package</code> argument (this will <em>always</em> be the second unnamed argument, so code can be neater). By default, this will be the <code>base</code> package, but <em>any</em> other package will need to be specified (this includes default packages like <code>stats</code>).</p>
-<pre class="r"><code>Rnorm &lt;- .typo(rnorm,stats)</code></pre>
+<pre class="r"><code>#Rnorm &lt;- .typo(rnorm,stats)</code></pre>
 <p>Within the wrapper function, this changes two things. The argument passed to <code>requireNamespace()</code> will match this package, as will the “proper” function call</p>
-<pre class="r"><code>Rnorm
-#&gt; function(...)
-#&gt; {
-#&gt;  requireNamespace(&quot;stats&quot;,quietly=T)
-#&gt;  .call &lt;- deparse(sys.call())
-#&gt;  .typo_alert(&quot;rnorm&quot;,.call)
-#&gt;  stats::rnorm(...)
-#&gt; }
-#&gt; &lt;environment: 0x0000020f55e527e0&gt;</code></pre>
+<pre class="r"><code>#Rnorm</code></pre>
 </div>
 <div id="warning" class="section level2">
 <h2>Warning</h2>
