Added title to index

--- a/index.html
+++ b/index.html
@@ -11,7 +11,7 @@
 
 
 
-<title>README.utf8</title>
+<title>typos</title>
 
 <script>// Pandoc 2.9 adds attributes on both header and div. We remove the former (to
 // be compatible with the behavior of Pandoc < 2.8).
@@ -374,6 +374,7 @@ summary {
 
 
 
+<h1 class="title toc-ignore">typos</h1>
 
 </div>
 
@@ -432,7 +433,7 @@ devtools::install_github(&quot;MyKo101/typos&quot;)</code></pre>
 #&gt;  .typo_alert(&quot;rnorm&quot;,.call)
 #&gt;  stats::rnorm(...)
 #&gt; }
-#&gt; &lt;environment: 0x0000020f4ff74c38&gt;</code></pre>
+#&gt; &lt;environment: 0x0000020f4f0a8ff0&gt;</code></pre>
 </div>
 <div id="warning" class="section level2">
 <h2>Warning</h2>
